# BuildSpeakers

./: README.md  analyses.py  batch_run.py  eksperiment_sweep.py  experiment.py  filters.py  loop.py  mfb.py  params.py  physics.py  presets.py  pyproject.toml  report.py  run.py  sweep_compare.py
mfb/: __init__.py
mfb/analysis/: analyses.py  bode.py  distortion.py  frequency.py  poles.py  report.py  sensitivity.py  stability.py  sweep_compare.py  time_domain.py
mfb/blocks/: __init__.py  acoustic_model.py  amplifier.py  box.py  controller.py  loopshape_controller.py  pid_controller.py  prefilter.py  sensor.py  speaker.py
mfb/circuit/: block_diagrams.py  current_amp_interface.py  scaling.py  sensor_frontend.py  summing_node.py
mfb/components/: acoustic.py  box.py  controller.py  injector.py  sensor.py  source.py  speaker_electrical.py  speaker_mechanical.py  speaker_plant.py
mfb/config/: experiment.py  params.py  presets.py
mfb/control/: controller.py  limiter.py  loop_assembler.py  measurement_filters.py  prefilter.py  repair_path.py
mfb/core/: base.py  math_helpers.py  signals.py  statespace.py  transfer.py
mfb/nonlinear/: base.py  bl_curve.py  cms_curve.py  le_curve.py  limiter.py
mfb/params/: amp_params.py  box.py  box_params.py  controller.py  injection.py  sensor.py  sensor_params.py  source.py  speaker.py  speaker_params.py
mfb/plant/: acoustic.py  amplifier.py  (+4 more)
scripts/: run_default.py  run_pi_sweep.py  run_time_experiment.py
tests/: test_injected_loop.py  test_nonlinear_hooks.py  test_sensor.py  test_speaker_plant.py  test_transfer.py
(+25 files in other folders)
