[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfb-study"
version = "0.1.0"
description = "Educational object-oriented motional feedback loudspeaker simulation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["mfb*"]
